--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
         <script src="js/lib/angular-1.5.7.min.js"></script>
         <script src="js/lib/angular-route.min.js"></script>
+        <script src="js/services/user.js"></script>
         <script src="js/controllers/profileController.js"></script>
         <script src="js/app.js"></script>
         <meta charset="utf-8">
